--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,13 @@ baseurl: /digital
 digital-assets: https://www.lib.uidaho.edu/assets
 
 # page gen settings https://github.com/avillafiorita/jekyll-datapage_gen
-page_gen:
-  - data: 'boxing'
-    template: 'items'
-    name: 'object-id'
-    dir: 'items'
-    extension: 'html'   
+
+# page_gen:
+#  - data: 'boxing'
+#    template: 'items'
+#    name: 'object-id'
+#    dir: 'items'
+#    extension: 'html'   
 
 # add liquid profiler to id bottlenecks
 # profile: true
