--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,7 +1,7 @@
 # Jekyll Digital Collection Generator
 
 # Site settings
-title: Donald R. Theophilus Boxing Photograph Collection
+title: Digital Collections, University of Idaho
 # choose metadata, be sure to also change page_gen data setting!
 metadata: boxing # check against cdm-collection-id below -- this should be used in config file as well
 
