--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: https://www.lib.uidaho.edu
 # location on the website, normally in /digital
 # e.g. /digital/hjccc
 baseurl: /digital
+description: University of Idaho Digital Collections
 
 # url to the shared assets folder on Digital
 digital-assets: https://www.lib.uidaho.edu/assets
