--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -13,7 +13,7 @@ cdm-collection-id: boxing
 
 # header and head metadata
 tagline: Photographs of University of Idaho Boxers and Boxing Teams, 1934 - 1953
-description: "A digital collection comprised of 52 photographs of boxers and boxing teams from the University of Idaho" 
+description:
 keywords: "UI; Idaho; Sports" # describing the whole collection -- add to the two provided
 author: # You! Add your github username 
 
