get locations working

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -48,7 +48,7 @@ subject-min: 1 # min size for subject cloud, too many terms = slow load time!
 stopwords: boxers;boxing;boxer # set of subjects separated by ;, e.g. boxers;boxing
 
 # Locations page
-locations-on: # true/false
+locations-on: true
 
 # Timeline
 year-navigation: #"1900;1905;1910;1915;1920" # set years to appear in dropdown nav
