--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -3,30 +3,30 @@
 # Site settings
 title: Digital Collections, University of Idaho
 # choose metadata, be sure to also change page_gen data setting!
-metadata: boxing # check against cdm-collection-id below -- this should be used in config file as well
+metadata: # check against cdm-collection-id below -- this should be used in config file as well
 
 # repository variables (leave blank if self-contained)
 # url for our CDM server
-cdm-url: https://cdm17254.contentdm.oclc.org
+cdm-url: 
 # contentdm collection name 
-cdm-collection-id: boxing 
+cdm-collection-id:  
 
 # header and head metadata
-tagline: Photographs of University of Idaho Boxers and Boxing Teams, 1934 - 1953
+tagline: 
 description:
-keywords: "UI; Idaho; Sports" # describing the whole collection -- add to the two provided
+keywords: # describing the whole collection -- add to the two provided
 author: # You! Add your github username 
 
 # Home page
-home-banner-image-number: 26 # use number of photo from collection
+home-banner-image-number: # use number of photo from collection
 home-banner-image-link:  # leave blank unless no cdm number to generate item
-home-banner-image-title: 1947-1948 University of Idaho boxing squad from https://digital.lib.uidaho.edu/cdm/ref/collection/boxing/id/9 # for accessibility 
+home-banner-image-title: # for accessibility 
 home-title-y-padding: 12em # the margin from the top your title portion will appear
 carousel-height: # in px, but don't include the "px"; default is 300.
 featured-subjects: #separate semi-colon(';') - if left blank, will be automatically generated to create top 5 subjects
-featured-subjects-max: 6 # set number of top subjects to display if auto generating
-featured-locations: University of Idaho; Sacramento, California; #separate by semi-colon(';') - if left blank, will be automatically generated to create top 5 locations
-featured-locations-max: 3
+featured-subjects-max: 8 # set number of top subjects to display if auto generating
+featured-locations: #separate by semi-colon(';') - if left blank, will be automatically generated to create top 5 locations
+featured-locations-max: 6
 mediatypes: images; #options[documents,images,video,sound,data] separate semi-colon(';'). If semi-colon is present, the browse items on the browse page will display a type field. If only one media type (and thus no semi-colon), no type field will display
 
 # Browse page
@@ -45,7 +45,7 @@ zoom-level: 6 # zoom level for map
 # Subject page
 subjects-off: false # true / false, turns off subject generation to lower dev build time (then page doesn't work!)
 subject-min: 1 # min size for subject cloud, too many terms = slow load time!
-stopwords: boxers;boxing;boxer # set of subjects separated by ;, e.g. boxers;boxing
+stopwords: # set of subjects separated by ;, e.g. boxers;boxing
 
 # Locations page
 locations-on: true
