--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -2,31 +2,14 @@
 
 # Site settings
 title: Digital Collections, University of Idaho
-# choose metadata, be sure to also change page_gen data setting!
-metadata: # check against cdm-collection-id below -- this should be used in config file as well
-
-# repository variables (leave blank if self-contained)
-# url for our CDM server
-cdm-url: 
-# contentdm collection name 
-cdm-collection-id:  
 
 # header and head metadata
-tagline: 
-description:
-keywords: # describing the whole collection -- add to the two provided
-author: # You! Add your github username 
+description: Official site for University of Idaho Library's Digital Collections
+keywords: digital collections, University of Idaho # describing the whole collection -- add to the two provided
+author: owikle # You! Add your github username 
 
 # Home page
-home-banner-image-number: # use number of photo from collection
-home-banner-image-link:  # leave blank unless no cdm number to generate item
-home-banner-image-title: # for accessibility 
 home-title-y-padding: 12em # the margin from the top your title portion will appear
-carousel-height: # in px, but don't include the "px"; default is 300.
-featured-subjects: #separate semi-colon(';') - if left blank, will be automatically generated to create top 5 subjects
-featured-subjects-max: 8 # set number of top subjects to display if auto generating
-featured-locations: #separate by semi-colon(';') - if left blank, will be automatically generated to create top 5 locations
-featured-locations-max: 6
 mediatypes: images; #options[documents,images,video,sound,data] separate semi-colon(';'). If semi-colon is present, the browse items on the browse page will display a type field. If only one media type (and thus no semi-colon), no type field will display
 
 # Browse page
@@ -34,7 +17,7 @@ mediatypes: images; #options[documents,images,video,sound,data] separate semi-co
 # fields given the "btn" option can be multivalued with ";" such as subjects.
 
 # Item page 
-browse-buttons: true # true / false, adds previous/next arrows to items, but doubles build time
+browse-buttons: false # true / false, adds previous/next arrows to items, but doubles build time
 
 # Map page
 # see _data/map-config.csv for field display options
@@ -52,11 +35,7 @@ subject-min: 1 # min size for subject cloud, too many terms = slow load time!
 stopwords: # set of subjects separated by ;, e.g. boxers;boxing
 
 # Locations page
-locations-on: true
-
-# Timeline
-year-navigation: #"1900;1905;1910;1915;1920" # set years to appear in dropdown nav
-year-nav-increment: 5 # set increments when auto gen nav years
+locations-on: false
 
 # About page
 about-off: false # true / false, if true will not show link to about page on front. Need to erase link in nav-configuration as well. 
