--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -33,5 +33,7 @@ stopwords: # set of subjects separated by ;, e.g. boxers;boxing
 # About page
 about-off: false # true / false, if true will not show link to about page on front. Need to erase link in nav-configuration as well. 
 
+# Data page
+metadata: digital_all_collections
 
 gh-repository: https://github.com/uidaholib/collectionbuilder-cdm-template
