--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,6 +1,6 @@
 # Jekyll Digital Collection Generator
 
-
+# featured item var for head meta markup - there is no logic in this project!
 featured_item_src: https://www.lib.uidaho.edu/media/digital/small/uihistorical.jpg
 featured_item_alt: "historic black and white photograph of campus administration building"
 
